--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
+
 body{
     background: #3b010d;
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'PT Serif', serif;
 }
 /*==========Contenedor===================*/
 .contenedor{
@@ -12,24 +15,20 @@ body{
     gap: 5px;
 }
 @media only screen and (min-width: 700px) {
-    /* For tablets: */
     .contenedor{
-        display: flex;
         flex-direction: row;
         width: 700px;
         height: 450px;
         margin: 50px auto;
-        background: black;
         border-radius: 20px;
-        gap: 5px;
     }
 }
 /*=========CirculosStatus==========*/
 .actions{
     display: flex;
-    width: 80px;
+    width: 70px;
     height: 20px;
-    background: gray;
+    background: #73041b;
     border-radius: 10px;
     align-items: center;
     justify-content: center;
@@ -42,6 +41,17 @@ body{
     height: 18px;
     border-radius: 50px;
     background-color: #6a6a6a;
+}
+@media only screen and (min-width: 700px) {
+    .actions{
+        width: 100px;
+        height: 30px;
+        gap: 5px;
+    }
+    .light-status{
+        width: 25px;
+        height: 25px;
+    }
 }
 #c2{
     background: #ce8b09;
@@ -63,27 +73,23 @@ body{
     text-align: center;
     border-radius: 10px;
     border-style: solid;
-    border-color: grey;
+    border-color: #3b010d;
     box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
+}
+.frame img{
+    width: 150px;
 }
 @media only screen and (min-width: 700px) {
     .media-page{
         display: inline-flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-around;
         width: 50%;
-        background-color: tomato;
-        border-radius: 10px;
     }
     .media{
-        width: 220px;
-        height: 180px;
-        margin-top: -50px;
-        background-color: #a3001f;
-        text-align: center;
-        border-radius: 10px;
-        border-style: none;
+        width: 250px;
+        height: 200px;
+    }
+    .frame img{
+        width: 200px;
     }
 }
 /*=======Section list=======*/
@@ -96,6 +102,13 @@ body{
     background: #a3001f;
     border-radius: 10px;
     box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
+}
+@media only screen and (min-width: 700px) {
+    .boton-list{
+        width: 100px;
+        height: 30px;
+        margin-left: 5px;
+    }
 }
 /*=======Section Search=======*/
 .search-form{
@@ -121,33 +134,51 @@ input{
     border-style: none;
     box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
 }
-.search-form button:active{
+@media only screen and (min-width: 700px) {
+    input{
+        height: 30px;
+    }
+    .search-form button{
+        width: 40px;
+        height: 40px;
+    }
+}
+.boton-list:active, .search-form button:active{
     background: green;
 }
-
-
 /*==========Page2==========*/
 .details-page{
     background: tomato;
     border-radius: 10px;
 }
 @media only screen and (min-width: 700px) {
-    /* For tablets: */
     .details-page{
         width: 50%;
-        background: tomato;
-        border-radius: 10px;
     }
 }
 .title{
     text-align: center;
+    margin-top: -25px;
 }
 .form-estadisticas{
     width: 330px;
-    margin: auto;
+    margin-left: 5px;
 }
-
-.tpokemon, .movs{
+.tipo-poke {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+.tpokemon{
+    background: #df0303;
+    width: 100px;
+    height: 25px;
+    border-radius: 10px;
+    border-style: none;
+    text-align: center;
+    justify-content: center;
+}
+.movs{
     margin-left: 20px;
 }
 .item{
@@ -170,7 +201,6 @@ input{
     width: 200px;
 }
 @media only screen and (min-width: 700px) {
-    /* For tablets: */
     .item .item-titulo{
         width: 80px;
     }
