--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body{
     .contenedor{
         flex-direction: row;
         width: 700px;
-        height: 450px;
+        height: 480px;
         margin: 50px auto;
         border-radius: 20px;
     }
@@ -98,7 +98,8 @@ body{
     height: 20px;
     text-align: center;
     justify-content: center;
-    border-style: none;
+    border-style: solid;
+    border-color: #3b010d;
     background: #a3001f;
     border-radius: 10px;
     box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
@@ -131,7 +132,8 @@ input{
     height: 30px;
     border-radius: 50%;
     background: #a3001f;
-    border-style: none;
+    border-style: solid;
+    border-color: #3b010d;
     box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
 }
 @media only screen and (min-width: 700px) {
@@ -156,9 +158,10 @@ input{
         width: 50%;
     }
 }
-.title{
+.title h2, .title h3{
     text-align: center;
-    margin-top: -25px;
+    margin: 0px;
+    margin-bottom: 1px;
 }
 .form-estadisticas{
     width: 330px;
@@ -170,16 +173,13 @@ input{
     gap: 20px;
 }
 .tpokemon{
-    background: #df0303;
+    background: #a3001f;
     width: 100px;
     height: 25px;
     border-radius: 10px;
     border-style: none;
     text-align: center;
-    justify-content: center;
-}
-.movs{
-    margin-left: 20px;
+    
 }
 .item{
     display: flex;
@@ -199,6 +199,17 @@ input{
 
 .item progress{
     width: 200px;
+}
+.movimientos{
+    display: flex;
+    flex-direction: column;
+}
+#movs{
+    background: #a3001f;
+    width: 150px;
+    text-align: center;
+    border-radius: 10px;
+    margin: -5px auto 5px auto;
 }
 @media only screen and (min-width: 700px) {
     .item .item-titulo{
